# ChangeLog for Gentoo System Intialization core utilities.
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2
# $Header$

  16 Feb 2005; Martin Schlemmer <azarah@gentoo.org>:

    depend.c, depend.h: Change service_type_names declaration in depend.h to
                        extern and move the definition to depend.c to avoid
                        warnings.

  16 Feb 2005; Martin Schlemmer <azarah@gentoo.org>:

    Add README.

  16 Feb 2005; Martin Schlemmer <azarah@gentoo.org>:

    depscan.c: Add delete_var_dirs() to delete volatile directories in svcdir.
               Change 'char *' declarations for create_directory() and
               create_var_dirs() to 'const char*'.
    misc.h, misc.c: Add rmtree() function.  Fix ls_dir() not to include '.'
                    and '..' in its listing.  Fix segfault in ls_dir() if the
                    file list is empty.

  16 Feb 2005; Martin Schlemmer <azarah@gentoo.org>:

    Add Header tags to all source files and Makefile.

  16 Feb 2005; Martin Schlemmer <azarah@gentoo.org>:

    debug.h: perror() set errno to ESPIPE for some reason - restore errno after
             calling perror().
    depscan.c: Add code to create svcdir and co if missing.
    misc.c: Add missing '\n' to DBG_MSG in mktree().
    misc.h: Add a comment about strcatpaths() allocating the memory needed.

  16 Feb 2005; Martin Schlemmer <azarah@gentoo.org>:

    Initial checkin.  Still rough in some parts, but should be 100%
    similar in output to depscan.sh and co.


# vim:expandtab